<resources>
    <string name="app_name">AppGasEta1</string>
    <string name="txt_titulo">Gasolina X Etanol</string>
    <string name="txt_etanol">R$ Etanol</string>
    <string name="txt_nome_curso_desejado">Nome do Curso Desejado</string>
    <string name="txt_telefone_contato">Telefone de contato</string>
    <string name="txt_gasolina">R$ Gasolina</string>
    <string name="btn_limpar">LIMPAR</string>
    <string name="btn_calcular">CALCULAR</string>
    <string name="btn_salvar">SALVAR</string>
    <string name="btn_finalizar">FINALIZAR</string>
    <string name="txt_resultado">Resultado</string>
</resources>